--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ tensorflowlearning/detectobject/data.zip
 /tensorflowlearning/trained_model_gpu1
 /tensorflowlearning/trained_model
 /tensorflowlearning/trained_model_cpu
+.vscode/settings.json
