cut_and_shift_audio

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ tensorflowlearning/detectobject/data.zip
 /tensorflowlearning/trained_model_cpu
 faces/weights/facenet_keras_weights.h5
 faces/svm.pkl
+objectdetect/wav2vec_large.pt
