--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ tensorflowlearning/detectobject/data.zip
 faces/weights/facenet_keras_weights.h5
 faces/svm.pkl
 objectdetect/wav2vec_large.pt
+objectdetect/wav2vec2_fairseq_base_ls960_asr_ls960.pth
