--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,7 @@ faces/weights/facenet_keras_weights.h5
 faces/svm.pkl
 objectdetect/wav2vec_large.pt
 objectdetect/wav2vec2_fairseq_base_ls960_asr_ls960.pth
+
+objectdetect/cut_**.wav
+objectdetect/w2v_large_lv_fsh_swbd_cv_ftls960_updated.pt
+objectdetect/w2v_large_lv_fsh_swbd_cv_ftsb300_updated.pt
